# cpsc538-project

./: Cargo.toml  readme.md
benches/: bench.rs
project1-kvs-rust/project1-kvs-Nazari-Amirmohammad 2/: kvs-results.xlsx
project2-fault_tolerance/starter_code_kv_store_final 2/: Cargo.toml  build.rs  readme.md
project2-fault_tolerance/starter_code_kv_store_final 2/data/input/: generate_linearizability_input.py  generate_read_your_write_input.py  generate_replication_input.py  (+36 more)
project2-fault_tolerance/starter_code_kv_store_final 2/src/: kvs.rs  network.rs
project2-fault_tolerance/starter_code_kv_store_final 2/tests/: bench.rs  linearizability.rs  read_your_write.rs  replication.rs  sharding.rs  utils.rs
project3-distributed_shared_memory/starter_code_kv_store 2/: Cargo.toml
project3-distributed_shared_memory/starter_code_kv_store 2/data/input/: generate_bench_input.py  generate_linearizability_input.py  long2.txt  long3.txt  long4.txt  long5.txt  long6.txt  long7.txt  long8.txt  long9.txt  read_mostly_high_contention2.txt  read_mostly_high_contention3.txt  read_mostly_high_contention6.txt  read_mostly_high_contention8.txt  read_mostly_high_contention9.txt  read_mostly_low_contention4.txt  read_mostly_low_contention5.txt  read_mostly_low_contention8.txt  ryw3.txt  ryw4.txt  write_mostly_high_contention2.txt  write_mostly_high_contention3.txt  write_mostly_high_contention7.txt  write_mostly_high_contention8.txt  write_mostly_low_contention2.txt  write_mostly_low_contention3.txt  write_mostly_low_contention4.txt  write_mostly_low_contention5.txt
project3-distributed_shared_memory/starter_code_kv_store 2/src/: kvs.rs  lib.rs  network.rs
project3-distributed_shared_memory/starter_code_kv_store 2/tests/: bench.rs  linearizability.rs  read_your_write.rs
src/: hash_map.rs  lib.rs  pair.rs  sync_linked_list.rs
tests/: integration_test.rs
