[package]
name = "kv_store"
version = "0.1.0"
edition = "2018"
build = "build.rs"

description = "A simple distributed hash table implementation."

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "controller"
path = "src/bin/controller.rs"

[dependencies]
# Add your dependencies here.
# For the integration test and microbenchmarks, we'll include the following:
criterion = "0.3.4"
rand = "0.8.5"
lazy_static = "1.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
# Add any development dependencies here.

[workspace]
# This section allows you to define a workspace if you have multiple crates in your project.
# If your project only contains a single crate, you can remove this section.

[profile.dev]
# Adjust these settings for development builds.
opt-level = 1

[profile.release]
# Adjust these settings for release builds.
opt-level = 3